--- a/src/app/pages/view-card/task/task.component.html
+++ b/src/app/pages/view-card/task/task.component.html
@@ -15,10 +15,10 @@
                     <label for="title">Titulo</label>
                     <input type="text" name="title" id="title" formControlName="titleTask" />
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="title">Responsável</label>
                     <input type="text" name="title" id="title" formControlName="memberTask" />
-                </div>
+                </div> -->
                 <div class="form-group">
                     <label for="deliveryDate">Entrega</label>
                     <input class="datePicker" matInput [matDatepicker]="picker" formControlName="delivery_date">
