--- a/src/app/pages/view-card/view-card.component.html
+++ b/src/app/pages/view-card/view-card.component.html
@@ -3,7 +3,7 @@
         <div class="headerContent">
             <div class="title">
                 <h1>{{cardData.title!}}</h1>
-                <p>Na lista: {{cardData.tag}}</p>
+                <p>Tag: {{cardData.tag}}</p>
             </div>
             <div class="clearC">
                 <button class="clear" (click)="refresh()">
