--- a/src/app/pages/view-card/view-card.component.css
+++ b/src/app/pages/view-card/view-card.component.css
@@ -1,6 +1,6 @@
 .container {
     width: 100vw;
-    height: 85vh;
+    height: 87vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,9 +10,12 @@
 
 .card {
     background-color: #ececec;
-    width: 70%;
+    width: 78%;
     height: 95%;
-    padding: 1rem;
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
     border-radius: .5rem;
     box-shadow: 2px 3px 5px #52525252;    
 }
@@ -47,31 +50,33 @@ button:hover {
 
 .viewPort {
     width: 100%;
-    height: 400px;
+    height: 85%;
 }
 
 .conteinerContent {
     width: 100%;
+    /* height: 110%; */
     display: flex;
     justify-content: space-around;
 
 }
 
 .title h1 {
-    margin-bottom: -3px;
-    font-size: 2em;
+    margin-bottom: -4px;
+    font-size: 2.1em;
     font-weight: 500;
     color: #020202;
 }
 
 .title p {
     margin-left: 5px;
+    margin-top: 2px;
+    font-size: 1rem;
 }
 
 .header h3 {
     margin-bottom: -5px;
     font-weight: 500;
-    color: #6e6e6e;
     font-size: 1em;
 }
 
@@ -116,6 +121,7 @@ button:hover {
 
 .formGroup {
     margin-bottom: 10px;
+    
 }
 
 .formGroup h2 {
@@ -269,6 +275,7 @@ button:hover {
     display: flex;
     align-items: center;
     margin-top: 5px;
+    margin-bottom: -15px;
     width: 100%;
     box-sizing: border-box;
 }
@@ -600,6 +607,7 @@ button:hover {
     background-color: #d8d8d8;
     padding: 5px;
     margin-top: 5px;
+    border-radius: 3px;
 }
 
  .card-task {
