--- a/src/app/pages/view-card/view-card.component.css
+++ b/src/app/pages/view-card/view-card.component.css
@@ -612,6 +612,7 @@ button:hover {
 
  .card-task {
     background-color: #fafafa;
+    margin-top: 5px;
     margin-bottom: 5px;
     border-bottom: 1px solid rgb(155, 155, 155);
     height: 2rem;
