--- a/src/app/pages/view-card/view-card.component.html
+++ b/src/app/pages/view-card/view-card.component.html
@@ -126,15 +126,13 @@
                         <div class="file-class" *ngIf="cardData.files.length > 0">
                             <h1>Arquivos</h1>
                             <div *ngFor="let file of cardData.files" class="file-contianer">
-                                <div class="file-img" *ngIf="file.detail.type !== '.pdf' || '.docx'; else noImage">
+                                <div class="file-img">
                                     <button (click)="openDialogImage('300ms', '300ms', file.detail.location)">
-                                        <img src="{{file.detail.location}}" alt="Imagem do arquivo">
+                                        <img src="{{file.detail.location}}" alt="Imagem do arquivo" *ngIf="file.detail.type; else noImage">
                                     </button>
                                 </div>
-                                <ng-template class="file-contianer" #noImage>
-                                    <div class="file-img">
-                                        <img src="../../../assets/Arquivo.jpg" alt="Imagem do arquivo">
-                                    </div>
+                                <ng-template class="file-contianer" #noImage>                                    
+                                        <img src="../../../assets/Arquivo.jpg" alt="Imagem do arquivo">                                    
                                 </ng-template>
                                 <div class="file-content">
                                     <div class="file-title">
