--- a/src/app/pages/view-card/view-image/view-image.component.css
+++ b/src/app/pages/view-card/view-image/view-image.component.css
@@ -1,5 +1,5 @@
 .image-div {
-    margin: 0, auto;
+    width: auto;
     padding: 0;
 }
 
@@ -7,5 +7,5 @@
     max-width: 1180px;
     max-height: 550px;
     width: auto;
-    height: auto;
+    
 }
