--- a/src/app/pages/view-card/list/list.component.css
+++ b/src/app/pages/view-card/list/list.component.css
@@ -76,7 +76,7 @@ button {
   .inputs input{
     margin-left: 10px;
      background-color: #bebebe52;
-     width: 60%;
+     width: 90%;
      height: 40px;
      margin-top: 5px;
      padding-left: 9px;
@@ -104,7 +104,10 @@ button {
  }
 
  .buttons button:last-child {
-  background-color: #b65b5b;
+  background-color: #ffffff;
+  border: solid 1px #000;
+  color: #000;
+  font-weight: 500;
  }
  .buttons button:hover {
   box-shadow: 1px 1px 3px rgb(110, 110, 110);
