--- a/src/app/pages/view-card/task/task.component.css
+++ b/src/app/pages/view-card/task/task.component.css
@@ -78,7 +78,7 @@ button {
   .inputs input{
     margin-left: 10px;
      background-color: #bebebe52;
-     width: 60%;
+     width: 90%;
      height: 40px;
      margin-top: 5px;
      padding-left: 9px;
@@ -106,7 +106,10 @@ button {
  }
 
  .buttons button:last-child {
-  background-color: #b65b5b;
+  background-color: #ffffff;
+  border: solid 1px #000;
+  color: #000;
+  font-weight: 500;
  }
  .buttons button:hover {
   box-shadow: 1px 1px 3px rgb(110, 110, 110);
@@ -125,10 +128,10 @@ button {
 
 .form-group {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     margin: 5px;
-    width: 60%;
+    width: 90%;
     height: 70%; 
     /* background-color: red; */
 }
@@ -136,7 +139,7 @@ button {
 .form-group input, select{
    margin-left: 10px;
     background-color: #bebebe52;
-    width: 60%;
+    width: 90%;
     height: 40px;
     margin-top: 5px;
     padding-left: 9px;
@@ -146,6 +149,7 @@ button {
     outline: 0;   
 
 }
- .form-group .datePicker {
-    width: 47%;
+.form-group .datePicker {
+    width: 40%;
+    margin-left: 13px;
 }
