--- a/src/app/pages/view-card/task/task.component.html
+++ b/src/app/pages/view-card/task/task.component.html
@@ -20,7 +20,7 @@
                     <input type="text" name="title" id="title" formControlName="memberTask" />
                 </div> -->
                 <div class="form-group">
-                    <label for="deliveryDate">Entrega</label>
+                    <label for="deliveryDate">Data</label>
                     <input class="datePicker" matInput [matDatepicker]="picker" formControlName="delivery_date">
                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
