--- a/src/app/pages/view-card/view-card.component.html
+++ b/src/app/pages/view-card/view-card.component.html
@@ -6,7 +6,7 @@
                 <p>Tag: {{cardData.tag}}</p>
             </div>
             <div class="clearC">
-                <button class="clear" (click)="refresh()">
+                <button class="clear" (click)="refreshPage()">
                     <fa-icon [icon]="faArrowsRotate"></fa-icon>
                 </button>
                 <button class="clear" routerLink="/">
