--- a/src/app/pages/view-card/edit-task/edit-task.component.html
+++ b/src/app/pages/view-card/edit-task/edit-task.component.html
@@ -25,6 +25,21 @@
                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
                 </div>
+                <mat-form-field appearance="fill">
+                    <mat-label>Membros</mat-label>
+                    <mat-select [formControl]="member" multiple>
+                        <mat-select-trigger>
+                            {{getName(member)}}
+                            <span *ngIf="validSizeMemberInDisplay(member)" class="example-additional-selection">
+                                (+{{(member.value?.length || 0) - 1}} {{member.value?.length === 2 ? 'outro' :
+                                'outros'}})
+                            </span>
+                        </mat-select-trigger>
+                        <div *ngFor="let member of taskData.member">
+                            <mat-option  [value]="member">{{member.name}}</mat-option>
+                        </div>
+                    </mat-select>
+                </mat-form-field>
             </div>
             <div class="buttons">
                 <button type="submit" (click)="editTask()">Salvar</button>
