--- a/src/app/pages/view-card/task/task.component.html
+++ b/src/app/pages/view-card/task/task.component.html
@@ -1,35 +1,49 @@
-<div class="clearC">
-    <h1 mat-dialog-title>Adicionar Task.</h1>
-    <button class="clear" (click)="closeDialog()">
-        <fa-icon [icon]="faXmark"></fa-icon>
-    </button>
-</div>
-<form [formGroup]="taskForm">
-    <div>
-        <div class="conteiner">
-            <div class="validation" *ngIf="titleFormat">
-                <p>Título é obrigatório.</p>
-            </div>
-            <div class="inputs">
-                <div class="form-group">
-                    <label for="title">Titulo</label>
-                    <input type="text" name="title" id="title" formControlName="titleTask" />
-                </div>
-                <!-- <div class="form-group">
-                    <label for="title">Responsável</label>
-                    <input type="text" name="title" id="title" formControlName="memberTask" />
-                </div> -->
-                <div class="form-group">
-                    <label for="deliveryDate">Data</label>
-                    <input class="datePicker" matInput [matDatepicker]="picker" formControlName="delivery_date">
-                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                </div>
-            </div>
-            <div class="buttons">
-                <button type="submit" (click)="addTask()">Salvar</button>
-                <button type="submit" (click)="closeDialog()">Cancelar</button>
-            </div>
+<div class="main">
+    <div class="container">
+        <div class="clearC">
+            <h1 mat-dialog-title>Adicionar Task.</h1>
+            <button class="clear" (click)="closeDialog()">
+                <fa-icon [icon]="faXmark"></fa-icon>
+            </button>
         </div>
+        <form [formGroup]="taskForm">
+            <div class="conteiner-for">
+                <div class="validation" *ngIf="titleFormat">
+                    <p>Título é obrigatório.</p>
+                </div>
+                <div class="inputs">
+                    <div class="form-group">
+                        <label for="title">Titulo</label>
+                        <input type="text" name="title" id="title" formControlName="titleTask"  required/>
+                    </div>
+                    <div class="form-group">
+                        <label for="deliveryDate">Data</label>
+                        <input class="datePicker" readonly="true" matInput [matDatepicker]="picker"
+                            formControlName="delivery_date">
+                        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </div>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Membros</mat-label>
+                        <mat-select [formControl]="member" multiple>
+                            <mat-select-trigger>
+                                {{getName(member)}}
+                                <span *ngIf="validSizeMemberInDisplay(member)" class="example-additional-selection">
+                                    (+{{(member.value?.length || 0) - 1}} {{member.value?.length === 2 ? 'outro' :
+                                    'outros'}})
+                                </span>
+                            </mat-select-trigger>
+                            <div *ngFor="let member of userList">
+                                <mat-option *ngIf="member.member" [value]="member">{{member.name}}</mat-option>
+                            </div>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div class="buttons">
+                    <button type="submit" [disabled]="taskForm.invalid" (click)="addTask()">Salvar</button>
+                    <button type="submit" (click)="closeDialog()">Cancelar</button>
+                </div>
+            </div>
+        </form>
     </div>
-</form>
+</div>
