--- a/src/app/pages/view-card/view-card.component.css
+++ b/src/app/pages/view-card/view-card.component.css
@@ -322,22 +322,14 @@ button:hover {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-
-
 /* ===========================*/
-
-
 
 .container-comment {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-
 }
 
-/**
- * Lineas / Detalles
- -----------------------*/
 /**
  * Avatar
  ---------------------------*/
@@ -425,7 +417,7 @@ button:hover {
 
 .comment-box .comment-head i {
     float: right;
-    margin-left: 14px;
+    margin-left: 1px;
     position: relative;
     top: 2px;
     color: #A6A6A6;
@@ -779,5 +771,24 @@ button:hover {
     border: 0;
     cursor: pointer;
     background-color: red;
-
 }
+
+.container-member > button {
+    margin-left: 0.3rem;
+    background-color: #038c53;
+    width: 1rem;
+    color: white;
+    font-weight: 500;
+}
+.container-member > button:hover {
+    background-color: #126643;
+    color: white;
+   
+}
+
+.container-emoji-input {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
