--- a/src/app/pages/view-card/view-card.component.html
+++ b/src/app/pages/view-card/view-card.component.html
@@ -19,7 +19,8 @@
                 <div class="vewContent">
                     <div class="header">
                         <h3>Data de entrega</h3>
-                        <p [ngStyle]="{'color': dateColor}" *ngIf="cardData.delivery_date; else noData">{{cardData.delivery_date!.toLocaleString().substring(0 ,
+                        <p [ngStyle]="{'color': dateColor}" *ngIf="cardData.delivery_date; else noData">
+                            {{cardData.delivery_date!.toLocaleString().substring(0 ,
                             10).split('-').reverse().join('/')}}</p>
                     </div>
                     <ng-template #noData>
@@ -29,10 +30,7 @@
                         <div class="formGroup">
                             <div class="btnEditDesc">
                                 <h2>Descrição</h2>
-                                <button (click)="showDesc()"
-                                matTooltip="Editar descrição."         
-                                matTooltipHideDelay="100"
-                                >
+                                <button (click)="showDesc()" matTooltip="Editar descrição." matTooltipHideDelay="100">
                                     <fa-icon [icon]="faPen"></fa-icon>
                                 </button>
                             </div>
@@ -55,73 +53,75 @@
                         </div>
                         <!-- CHECKLIST -->
                         <div *ngIf="listData.length">
-                        <div class="formGroup" >
-                            <h2>Checklist</h2>
-                            <div class="content-list-task" *ngFor="let list of listData">
-                                <div class="title-list-task">
-                                    <div *ngIf="!showEditList">
-                                        <h1>{{list.title}}</h1>
-                                    </div>                                    
-                                    <div *ngIf="!showEditList" class="buttons-action">
-                                        <button (click)="openDialogEditList( '400ms', '400ms', list)"
-                                        matTooltip="Editar Lista"         
-                                        matTooltipHideDelay="100"
-                                        >
-                                            <fa-icon [icon]="faPen"></fa-icon>
-                                        </button>
-                                        <button (click)="deleteList(list._id)"
-                                        matTooltip="Excluir Lista"         
-                                        matTooltipHideDelay="100"
-                                        >
-                                            <fa-icon  [icon]="faTrashAlt"></fa-icon>
-                                        </button>
-                                    </div>                                
-                                </div>
-                                <div class="card-task" *ngFor="let task of tasks[list._id]" [ngClass]="{'completed': task.completed}">
-                                   
-                                    <div class="title-task">
-                                        <!-- <input type="checkbox" name="task" (click)="onTaskClick(task)" formControlName="checkboxI"> -->
-                                        <button (click)="onTaskClick(task)">
-                                        <label>{{task.titleTask}}</label>
-                                    </button>
-                                    </div>
-                                    <div class="mat-menu-content">
-                                        <div class="info-tasks" *ngIf="task.delivery_date; else noDate">
-                                            <span class="spanTask">{{task.delivery_date.toLocaleString('pt-BR').substring(0 ,
-                                                 10).split('-').reverse().join('/')}}</span> 
-                                                 <span>{{task.member}}</span>
-                                         </div>
-                                        <div class="mat-menu">
-                                         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu"
-                                         matTooltip="Editar ou excluir tarefa."         
-                                        matTooltipHideDelay="100"
-                                         >
-                                             <mat-icon>more_vert</mat-icon>
-                                           </button>
-                                           <mat-menu #menu="matMenu" yPosition="above" class="action-task">
-                                             <button mat-menu-item (click)="openDialogEditTask('400ms', '400ms', task)">                                               
-                                               <span>Editar</span>
-                                             </button>                                      
-                                             <button mat-menu-item (click)="removeTask(list._id, task._id)">                                               
-                                               <span>Excluir</span>
-                                             </button>
-                                           </mat-menu>
+                            <div class="formGroup">
+                                <h2>Checklist</h2>
+                                <div class="content-list-task" *ngFor="let list of listData">
+                                    <div class="title-list-task">
+                                        <div *ngIf="!showEditList">
+                                            <h1>{{list.title}}</h1>
                                         </div>
-                                        <ng-template #noDate>                                           
-                                            <span></span>
-                                        </ng-template>
-                                    </div> 
+                                        <div *ngIf="!showEditList" class="buttons-action">
+                                            <button (click)="openDialogEditList( '400ms', '400ms', list)"
+                                                matTooltip="Editar Lista" matTooltipHideDelay="100">
+                                                <fa-icon [icon]="faPen"></fa-icon>
+                                            </button>
+                                            <button (click)="deleteList(list._id)" matTooltip="Excluir Lista"
+                                                matTooltipHideDelay="100">
+                                                <fa-icon [icon]="faTrashAlt"></fa-icon>
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="card-task" *ngFor="let task of tasks[list._id]"
+                                        [ngClass]="{'completed': task.completed}">
+
+                                        <div class="title-task">
+                                            <!-- <input type="checkbox" name="task" (click)="onTaskClick(task)" formControlName="checkboxI"> -->
+                                            <button (click)="onTaskClick(task)">
+                                                <label>{{task.titleTask}}</label>
+                                            </button>
+                                        </div>
+                                        <div class="mat-menu-content">
+                                            <div class="info-tasks" *ngIf="task.delivery_date; else noDate">
+                                                <span
+                                                    class="spanTask">{{task.delivery_date.toLocaleString('pt-BR').substring(0
+                                                    ,
+                                                    10).split('-').reverse().join('/')}}</span>
+                                                <div class="container-member" *ngFor="let member of task.member">
+                                                    <button *ngIf="task.member"
+                                                        [matTooltip]="member.name">{{getInitialCharacter(member)}}</button>
+                                                </div>
+                                            </div>
+                                            <div class="mat-menu">
+                                                <button mat-icon-button [matMenuTriggerFor]="menu"
+                                                    aria-label="Example icon-button with a menu"
+                                                    matTooltip="Editar ou excluir tarefa." matTooltipHideDelay="100">
+                                                    <mat-icon>more_vert</mat-icon>
+                                                </button>
+                                                <mat-menu #menu="matMenu" yPosition="above" class="action-task">
+                                                    <button mat-menu-item
+                                                        (click)="openDialogEditTask('400ms', '400ms', task)">
+                                                        <span>Editar</span>
+                                                    </button>
+                                                    <button mat-menu-item (click)="removeTask(list._id, task._id)">
+                                                        <span>Excluir</span>
+                                                    </button>
+                                                </mat-menu>
+                                            </div>
+                                            <ng-template #noDate>
+                                                <span></span>
+                                            </ng-template>
+                                        </div>
+                                    </div>
+                                    <div class="addNewList">
+                                        <button (click)="openDialogTask('400ms', '400ms', list._id)">
+                                            <fa-icon [icon]="faPlus"></fa-icon>
+                                            Adicionar novo item
+                                        </button>
+                                    </div>
                                 </div>
-                                <div class="addNewList">                                    
-                                    <button (click)="openDialogTask('400ms', '400ms', list._id)">
-                                        <fa-icon  [icon]="faPlus"></fa-icon>
-                                        Adicionar novo item
-                                    </button>
-                                </div>
+
                             </div>
-                            
                         </div>
-                    </div>
                         <!-- ARQUIVOS -->
                         <div class="file-class" *ngIf="cardData.files.length > 0">
                             <h1>Arquivos</h1>
@@ -154,16 +154,13 @@
                         </div>
                         <!-- COMENTÁRIOS -->
                         <div class="formGroup">
-                            <h2>Comentários - {{cardData.comments.length}}</h2>
-                            <input type="text" placeholder="Escreva uma comentário..." class="comment"
-                                formControlName="comment" />
+                            <h2>Comentários - {{cardData.comments.length}}</h2>                            
+                                <input type="text" placeholder="Escreva uma comentário..." class="comment"
+                                    formControlName="comment"/>                            
                             <div class="buttons">
                                 <button type="submit" (click)="addComments()">
                                     <fa-icon [icon]="faFloppyDisk"></fa-icon> Salvar
                                 </button>
-                                <!-- <button type="submit">
-                                    <fa-icon [icon]="faXmark"></fa-icon> Cancelar
-                                </button> -->
                             </div>
                         </div>
                         <div class="commentUsers" *ngFor="let commentUser of cardData.comments">
@@ -171,7 +168,7 @@
                                 <div class="comment-main-level">
                                     <!-- Avatar -->
                                     <div class="comment-avatar"><img src="../../../assets/663338.png" alt=""></div>
-                                    <!-- Contenedor del Comentario -->
+                                    <!-- Container do comentário -->
 
                                 </div>
                                 <div class="comment-box">
@@ -194,12 +191,6 @@
                                     </div>
                                     <p type="text" class="comment-content" *ngIf="!showComment">{{commentUser.comment}}
                                     </p>
-                                    <!-- <div class="editComment" *ngIf="showComment">
-                                        <textarea type="text" class="comment-content"
-                                        value="{{commentUser.comment}}"></textarea>
-                                        <button>Salvar</button>
-                                        <button (click)="unshoweditComment()">Cancelar</button>
-                                    </div>                                     -->
                                 </div>
                             </div>
 
@@ -209,18 +200,12 @@
                 <!-- MEMBROS -->
                 <div class="addContent">
                     <h3>Adiconar ao Cartão</h3>
-                    <button (click)="openDialogMember('400ms', '400ms')" 
-                    matTooltip="Adicionar membro"         
-                    matTooltipHideDelay="100"
-                    >Membros</button>
-                    <button (click)="openDialogList('400ms', '400ms')"
-                    matTooltip="Adicionar lista de tarefa"         
-                    matTooltipHideDelay="100"
-                    >CheckList</button>
-                    <button (click)="openDialogAnexo('400ms', '400ms')"
-                    matTooltip="Anexar arquivo"         
-                    matTooltipHideDelay="100"
-                    >Anexo</button>
+                    <button (click)="openDialogMember('400ms', '400ms')" matTooltip="Adicionar membro"
+                        matTooltipHideDelay="100">Membros</button>
+                    <button (click)="openDialogList('400ms', '400ms')" matTooltip="Adicionar lista de tarefa"
+                        matTooltipHideDelay="100">CheckList</button>
+                    <button (click)="openDialogAnexo('400ms', '400ms')" matTooltip="Anexar arquivo"
+                        matTooltipHideDelay="100">Anexo</button>
                     <div class="member">
                         <h3>Membros</h3>
                         <div class="memberesConteiner">
@@ -236,7 +221,7 @@
                 </div>
             </div>
         </cdk-virtual-scroll-viewport>
-    </div>    
+    </div>
     <div class="no-card">
         <ng-template #noCardData>
             <mat-spinner></mat-spinner>
